--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #e6e2d4;
-  --foreground: #171717;
+  --background: #e7e6e2;
+  --foreground: #323030;
 }
 
 @theme inline {
@@ -14,9 +14,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #0c161e;
+    --foreground: #efefef;
   }
+}
+
+.dark {
+  --background: #0c161e;
+  --foreground: #efefef;
 }
 
 body {
